--- a/package.json
+++ b/package.json
@@ -6,12 +6,21 @@
   "description": "A small text adventure - written in vanilla JS",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "test": "./node_modules/.bin/cucumber-js tests/features --import tests/features/support --import tests/features/step-definitions --world-parameters {\\\"browserName\\\":\\\"chrome\\\"} --format json:tests/results/chrome.json ; node ./generateReport ; open tests/results/chrome.html",
+    "testOnly": "./node_modules/.bin/cucumber-js tests/features --import tests/features/support --import tests/features/step-definitions --world-parameters {\\\"browserName\\\":\\\"chrome\\\"} --format json:tests/results/chrome.json",
+    "testReport": "node ./generateReport",
+    "openTestReport": "open tests/results/chrome.html"
   },
   "keywords": [],
   "license": "ISC",
   "dependencies": {
+    "@cucumber/cucumber": "^11.0.1",
     "express": "^4.21.1",
     "selenium-webdriver": "^4.25.0"
+  },
+  "devDependencies": {
+    "chai": "^5.1.1",
+    "cucumber-html-reporter": "^7.2.0"
   }
 }
