--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     "selenium-webdriver": "^4.25.0"
   },
   "devDependencies": {
-    "chai": "^5.1.1",
+    "chai": "^5.1.2",
     "cucumber-html-reporter": "^7.2.0"
+  },
+  "directories": {
+    "test": "tests"
   }
 }
