--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
   },
   "devDependencies": {
     "chai": "^5.1.2",
-    "cucumber-html-reporter": "^7.2.0"
+    "cucumber-html-reporter": "^7.2.0",
+    "wait-on": "^8.0.1"
   },
   "directories": {
     "test": "tests"
